unpackaged/main/default/objects/ps_location__c/ps_location__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Fields used during a ProfitStars location callout</description>
    <label>ps_Location</label>
</CustomObject>