unpackaged/main/default/objects/ps_location__c/fields/Custom_Error_Msg__c.field-meta.xml
<CustomField>
    <fullName>Custom_Error_Msg__c</fullName>
    <label>Custom Error Msg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>