unpackaged/main/default/objects/ps_location__c/fields/Hardcoded_Value__c.field-meta.xml
<CustomField>
    <fullName>Hardcoded_Value__c</fullName>
    <label>Hardcoded Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>