unpackaged/main/default/objects/ps_location__c/fields/Required_If__c.field-meta.xml
<CustomField>
    <fullName>Required_If__c</fullName>
    <label>Required If</label>
    <length>255</length>
    <type>Text</type>
</CustomField>